test/files/neg/t9745.check
t9745.scala:2: error: missing parameter type for expanded function ((x$1: <error>) => Seq({
  <x: error>.<$plus$eq: error>(1);
  42
}).apply(x$1))
  val func = Seq { x += 1; 42 } apply _
                                      ^
t9745.scala:8: error: missing parameter type
  val g = x => f(y += 1)(x)
          ^
t9745.scala:14: error: missing parameter type
  val g = x => f(x += 1)(x)
          ^
t9745.scala:19: error: missing parameter type
  val g = (x, y) => f(42)(x, y)
           ^
t9745.scala:19: error: missing parameter type
  val g = (x, y) => f(42)(x, y)
              ^
5 errors found
